# textToInt

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  textToNumber.py
src/text_to_number/: __init__.py  core.py
